add some new features

--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -53,6 +53,11 @@
                 <label for="volume-bar" class="visually-hidden">Volume control</label>
                 <input type="range" id="volume-bar" min="0" max="100" value="50" title="Volume control">
             </div>
+            <div class="speed-controls">
+                <button id="speed-down" class="speed-btn">-</button>
+                <span id="speed-display">1.0x</span>
+                <button id="speed-up" class="speed-btn">+</button>
+            </div>
         </div>
         
         <div class="search-results" id="search-results">
